tests/paczka1/fuzzy1/95210196.err
Error in line 6: FKipgn15HPl S254 42,44
Error in line 26: WNK A337 45,3
